<resources>
    <string name="app_name">WAAH chai</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Waah Chai App</string>
    <string name="nav_header_subtitle">+918394876737</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="log_in">LOG IN</string>
    <string name="sign_up">SIGN UP</string>

    <string name="termsandconditions">By signing up you agree to the <u>Terms And Conditions</u></string>
    <string name="resend_otp">Did not receive the OTP? <u>Resend OTP</u></string>
    <string name="forgot_pin"><u>Forgot PIN?</u></string>
    <string name="pin">PIN</string>
    <string name="mobile">Mobile</string>
    <string name="submit">Submit</string>
    <string name="please_enter_your_registered_mobile_number">Please enter your registered mobile number</string>
    <string name="re_enter_pin">Re-enter Pin</string>
    <string name="set_a_4_digit_pin">Set a 4 digit pin</string>
    <string name="name">Name</string>
    <string name="please_enter_the_otp_sent_to_your_device">Please enter the OTP sent to your device</string>
    <string name="title_activity_main_landing_map">MainLandingMapActivity</string>
    <string name="action_voice_rec">Speak</string>
    <string name="search_hint">Enter Location..</string>
    <string name="action_location">locate yourself</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="err_nick_address">Address nickname Cant be empty</string>
    <string name="err_flat">Cant be Empty</string>
    <string name="err_landmark">Cant be empty</string>
    <string name="err_tel">Mobile Invalid</string>
    <string name="err_mobile">Mobile is not valid</string>
    <string name="err_password_confirmation">Pin not correct</string>
    <string name="err_name">Name is required</string>
    <string name="title_activity_demo_nav">DemoNavActivity</string>
    <string name="err_amount">Amount Cant Be Empty</string>
    <string name="clear_order"><u>CLEAR ORDER</u></string>
    <string name="see_full_menu"><u>SEE FULL MENU</u></string>
    <string name="add_money"><u>ADD MONEY</u></string>
    <string name="add_address"><u>ADD ADDRESS</u></string>
    <string name="click_here"><u>Click Here</u></string>
    <string name="order_history"><u>ORDER HISTORY</u></string>
    <string name="title_activity_favourite_tapri_new">FavouriteTapriNew</string>
    <string name="terms">Terms &amp; Condtitions</string>

</resources>
